--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>war</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
-        <java-version>1.7</java-version>
+        <java-version>1.8</java-version>
         <org.springframework-version>4.1.0.RELEASE</org.springframework-version>
         <org.springframework.security-version>3.2.0.RELEASE</org.springframework.security-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
@@ -67,7 +67,7 @@
             <version>1</version>
         </dependency>
         
-        <!-- Jersey framwork - REST client -->
+        <!-- Jersey framework - REST client -->
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
